dev-feature-design-update: fix form container alignment

--- a/code/src/ui/interaction/form/form.module.css
+++ b/code/src/ui/interaction/form/form.module.css
@@ -3,7 +3,7 @@
   align-self: center;
   width: 90vw;
   padding: 1rem 2rem 0.5rem;
-  margin: 1rem;
+  margin: 0.75rem 1rem 1rem;
 
   background-color: var(--background-primary);
   border: 1px solid var(--border-primary) !important;
@@ -19,12 +19,13 @@
 .form-title {
   text-wrap: nowrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .form-contents {
   padding: 0.5rem;
   margin: 0.5rem 0 0;
-  height: 70vh;
+  height: 65vh;
   overflow-y: auto;
   overflow-x: hidden;
   background-color: var(--background-secondary);
